examples/test/testpolicy368.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy368
  namespace: namespace2
spec:
  podSelector:
    matchLabels:
      key27: value4
      key11: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value46
      podSelector:
        matchLabels:
          key48: value14
          key28: value7
